@@ -1,14 +1,12 @@
 import React, { Component } from 'react';
 import { Container, Image } from '@bucky24/react-canvas';
 
-import Door1 from '../assets/door1.png';
-
 class Door extends Component {
 	constructor(props) {
 		super(props);
 	}
 	render() {
-		const { x, y, isOpen } = this.props;
+		const { x, y, isOpen, image } = this.props;
 
 		const drawPosition = y*32-13;
 		const width = isOpen ? 5 : 32;
@@ -18,7 +16,7 @@ class Door extends Component {
 				y={drawPosition}
 				width={width}
 				height={45}
-				src={Door1}
+				src={image}
 			/>;
 		</Container>;
 	}
