@@ -1,0 +1,8 @@
+{
+	"version": 1,
+	"imageData": {
+		"image": "./chest.png",
+		"width": 32,
+		"height": 32
+	}
+}
