@@ -1,0 +1,8 @@
+{
+	"version": 1,
+	"imageData": {
+		"image": "./door.png",
+		"width": 32,
+		"height": 45
+	}
+}
