@@ -1,5 +1,4 @@
 For v0.4.0
-* Better editor experience
 * Editor handles multiple characters
 * Characters/Objects defined by data
 * Editor for custom enemies/characters/objects
