@@ -9,3 +9,5 @@ v0.3.0
 
 v0.4.0
 * Multiple characters on a map
+* Better editor experience
+* Objects defined by data
